# tiny-gateway

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SHOW_HN_POST.md  config.yml  docker-compose.yml  index.html  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docker-image.yml  release.yml
app/: main.py
app/api/: api.py  deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  users.py
app/config/: settings.py
app/core/: constants.py  middleware.py  security.py
app/models/: config_models.py  schemas.py
config/: config.yml
sample-configs/: basic-single-tenant.yml  multi-tenant-rbac.yml  multi-upstream.yml  path-rewrite.yml  wildcard-admin.yml
scripts/: demo.sh
tests/: conftest.py  constants.py  factories.py  test_config.yml  test_config_models.py  test_main.py  test_proxy.py
tests/api/: test_deps.py
tests/api/v1/: __init__.py  test_auth.py  test_rbac.py  test_users.py
tests/fixtures/: test_config.yml
tests/http/: test_api.http
tests/integration/: test_auth_flow.py  test_proxy_integration.py
tests/security/: test_security_helpers.py  test_token_validation.py
tiny_gateway/: __init__.py  main.py
tiny_gateway/api/: api.py  deps.py
tiny_gateway/api/v1/: api.py
tiny_gateway/api/v1/endpoints/: auth.py  users.py
tiny_gateway/core/: constants.py  middleware.py  security.py
tiny_gateway/models/: config_models.py  schemas.py
tiny_gateway/resources/: default_config.yml
