[project]
name = "tiny-gateway"
version = "0.1.0"
description = "API Gateway with JWT authentication and request proxying"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "httpx[http2]>=0.28.1",
  "pydantic-settings>=2.10.1",
]

[project.scripts]
tiny-gateway = "app.main:run"

# Use this if you prefer groups over extras (recommended for dev-only deps)
[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-asyncio>=1.1.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["resources/*.html", "resources/*.yml"]
