[project]
name = "tiny-gateway"
version = "0.1.0"
description = "API Gateway with JWT authentication and request proxying"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
  { name = "Tiny Gateway Contributors" },
]
maintainers = [
  { name = "Tiny Gateway Maintainers" },
]
keywords = ["api-gateway", "fastapi", "jwt", "rbac", "multitenant", "proxy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "python-jose[cryptography]>=3.5.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "httpx[http2]>=0.28.1",
  "pydantic-settings>=2.10.1",
]

[project.urls]
Homepage = "https://github.com/paul-callahan/tiny-gateway"
Repository = "https://github.com/paul-callahan/tiny-gateway"
Issues = "https://github.com/paul-callahan/tiny-gateway/issues"

[project.scripts]
tiny-gateway = "tiny_gateway.main:run"

# Use this if you prefer groups over extras (recommended for dev-only deps)
[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-asyncio>=1.1.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tiny_gateway*"]

[tool.setuptools.package-data]
tiny_gateway = ["resources/*.html", "resources/*.yml"]
